@@ -164,6 +164,7 @@ template <>
 ACE_Filecache_Hash_Entry::ACE_Hash_Map_Entry (ACE_Filecache_Hash_Entry *next,
                                               ACE_Filecache_Hash_Entry *prev)
   : ext_id_ (0),
+    int_id_ (0),
     next_ (next),
     prev_ (prev)
 {
